# flet-persona-chat

./: .gitignore  README.md  characters.py  chatbot.py  chats_view_ui.py  gguf_chat_ui.py  history_manager.py  main.py  memories_view_ui.py  person_view_ui.py  persona_selector_ui.py  pyproject.toml
modules/: chatbot.py  chats_view_ui.py  gguf_chat_ui.py  history_manager.py  memories_view_ui.py  person_view_ui.py  persona_selector_ui.py
