[project]
name = "flet-persona-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet>=0.28.3",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.65",
    "llama-cpp-python>=0.3.9",
]

[dependency-groups]
dev = [
    "flet[all]>=0.28.3",
]
